# Graficaci-n-Tarea-1

JuegoDeLaVida/: CMakeLists.txt
JuegoDeLaVida/src/: Celula.cpp  main.cpp
